Finished the desing of the recipe card with its styles

--- a/client/src/components/Recipes/Recipes.module.css
+++ b/client/src/components/Recipes/Recipes.module.css
@@ -78,6 +78,7 @@
 .recipes{
     display: grid;
     grid-template-columns: 1fr;
+    grid-template-rows: max-content;
     gap: 2rem;
 }
 
@@ -89,6 +90,6 @@
 
 @media (min-width: 768px){
     .recipes{
-        grid-template-columns: repeat(3, 1fr);
+        grid-template-columns: repeat(3, 35rem);
     }
 }
